@@ -446,6 +446,8 @@ pm-diesel-canister=Diesel fuel canister
 pm-kerosene-canister=Kerosene fuel canister
 pm-petrol-canister=Petrol fuel canister
 pm-naptha-canister=Naptha fuel canister
+pm-industrial-octane-fuel-canister=Industrial octane fuel canister
+pm-vehicle-octane-fuel-canister=Vehicle octane fuel canister
 pm-empty-fuel-canister=Empty fuel canister
 
 [entity-name]
@@ -1698,7 +1700,8 @@ pm-voltatic-piles=Voltatic piles
 pm-polonium=Polonium nuclear fuel
 pm-charged-batteries=Charged batteries
 pm-fuel-rods=Fuel rods
-pm-oil-canisters=Oil canisters
+pm-fuel-canisters=Fuel canisters
+pm-vechile-fuel-canisters=Vehicular fuel canisters
 
 [ammo-category-name]
 pm-shotgun-slug=Shotgun slug
